fixup! Re-align boxes

--- a/css/results.css
+++ b/css/results.css
@@ -30,7 +30,7 @@
 }
 
 .results .actions button {
-  width: 90%;
+  width: 95%;
   background: none;
   border: 1px solid white;
   color: white;
